--- a/jigsaw/jigsaw/View/Jigsaw/Piece.xaml
+++ b/jigsaw/jigsaw/View/Jigsaw/Piece.xaml
@@ -1,32 +1,34 @@
-﻿<UserControl x:Class="jigsaw.View.Jigsaw.Piece"
+﻿<TreeViewItem x:Class="jigsaw.View.Jigsaw.Piece"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:panels="clr-namespace:jigsaw.Jigsaw.View.Panels"
              xmlns:piece="clr-namespace:jigsaw.View.Jigsaw"
              xmlns:conv="clr-namespace:jigsaw.TypeConverters">
     
-    <UserControl.RenderTransform>
+    <TreeViewItem.RenderTransform>
         <TranslateTransform
-            X="{Binding Path=DeltaX, RelativeSource={RelativeSource AncestorType=UserControl}}"
-            Y="{Binding Path=DeltaY, RelativeSource={RelativeSource AncestorType=UserControl}}" />
-    </UserControl.RenderTransform>
+            X="{Binding Path=DeltaX, RelativeSource={RelativeSource AncestorType=TreeViewItem}}"
+            Y="{Binding Path=DeltaY, RelativeSource={RelativeSource AncestorType=TreeViewItem}}" />
+    </TreeViewItem.RenderTransform>
     
-    <UserControl.Resources>
+    <TreeViewItem.Resources>
+        <conv:TableToPieceConverter x:Key="TableToPieceConverter"/>
         <conv:SizeConverter x:Key="SizeConverter" />
         <conv:TabCenterConverter x:Key="TabCenterConverter" />
         <RectangleGeometry x:Key="MainRectangle" RadiusX="2" RadiusY="2" >
             <RectangleGeometry.Rect>
                 <MultiBinding Converter="{StaticResource SizeConverter}">
-                    <Binding Path="Width" RelativeSource="{RelativeSource AncestorType=UserControl}"/>
-                    <Binding Path="Height" RelativeSource="{RelativeSource AncestorType=UserControl}"/>
+                    <Binding Path="Width" RelativeSource="{RelativeSource AncestorType=TreeViewItem}"/>
+                    <Binding Path="Height" RelativeSource="{RelativeSource AncestorType=TreeViewItem}"/>
                 </MultiBinding>
             </RectangleGeometry.Rect>
         </RectangleGeometry>
         <EllipseGeometry x:Key="Tab" x:Shared="false" RadiusX="20" RadiusY="20"/>
-    </UserControl.Resources>
+    </TreeViewItem.Resources>
 
-    <UserControl.Style>
+    <TreeViewItem.Style>
         <Style>
             <Style.Triggers>
                 <Trigger Property="piece:Piece.IsRightPressed" Value="True">
@@ -55,14 +57,18 @@
                     
                 </Trigger>
             </Style.Triggers>
+            <Setter Property="piece:Piece.ForeignKeyPieces"
+                    Value="{Binding Path=ForeignKey, Converter={StaticResource TableToPieceConverter}}"/>
+            <Setter Property="piece:Piece.X" Value="{Binding Path=(panels:JigsawBoard.X), RelativeSource={RelativeSource Self}}"/>
+            <Setter Property="piece:Piece.Y" Value="{Binding Path=(panels:JigsawBoard.Y), RelativeSource={RelativeSource Self}}"/>                             
         </Style>
-    </UserControl.Style>
+    </TreeViewItem.Style>
     
-    <UserControl.Template>
+    <TreeViewItem.Template>
         <ControlTemplate>
             <Canvas>
                 <Path x:Name="path"
-                    Fill ="{Binding Path=Color, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                    Fill ="{Binding Path=Color, RelativeSource={RelativeSource AncestorType=TreeViewItem}}"
                     Stroke="Black"
                     StrokeThickness="2"
                     MouseDown="MouseDownHandler"
@@ -77,8 +83,8 @@
                     </Path.Effect>
                 </Path>
                 <Label Content="{Binding Path=Name}"/>
-                <ContentPresenter Content="{TemplateBinding UserControl.Content}" Visibility="Collapsed"/>
+                <!--<ContentPresenter Content="{TemplateBinding UserControl.Content}" Visibility="Collapsed"/>-->
             </Canvas>
         </ControlTemplate>
-    </UserControl.Template>
-</UserControl>
+    </TreeViewItem.Template>
+</TreeViewItem>
