--- a/trunk/jigsaw/jigsaw/MainWindow.xaml
+++ b/trunk/jigsaw/jigsaw/MainWindow.xaml
@@ -104,7 +104,7 @@
             
             <TreeView.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <StackPanel Orientation="Horizontal"/>
+                    <WrapPanel Orientation="Horizontal"/>
                 </ItemsPanelTemplate>
             </TreeView.ItemsPanel>
             
